# Zenzizenzizenzic-RL

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-single-platform.yml  release.yml
data/creature/: boxers.json  characters.json  creatures.json  debug.json  employees.json
data/item/: weapons.json
data/text/: help.txt  polaris  zenzi
data/wfc/: dungeon.json  dungeon_big.json
include/: action.h  actor.h  ai.h  color.h  combat.h  fov.h  gameover.h  invent.h  map.h  mapgen.h  menu.h  message.h  parser.h  pqueue.h  random.h  register.h  render.h  save.h  spawn.h  tile.h  version.h.in  wfc.h  windows.h
share/: zenzizenzizenzic.desktop.in
src/: action.c  actor.c  ai.c  combat.c  fov.c  gameover.c  invent.c  main.c  map.c  mapgen.c  message.c  parser.c  pqueue.c  random.c  register.c  render.c  save.c  spawn.c  tile.c
toolchain/: win64.cmake
windows/curses/: hiscore.c  menu.c  windows.c
